@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.yura.domination"
-      android:versionCode="50"
-      android:versionName="50"
+      android:versionCode="51"
+      android:versionName="51"
       android:installLocation="auto">
       
     <!-- android:targetSdkVersion 11 to hide the legacy menu button on tablets -->
@@ -46,6 +46,10 @@
 		         android:hardwareAccelerated="true"
 		         android:debuggable="true"
         >
+
+		<meta-data android:name="com.google.android.gms.games.APP_ID"
+		   android:value="@string/app_id" />
+
         <!-- android:backupAgent="TheBackupAgent" cant get this to work :( -->
 
 		<!-- <service android:name="net.yura.android.AndroidMeService" /> -->
